# $Id$

2008-06-11	Denis M. Gabaidulin

	* main/Flow/BaseEditor.class.php: object identifier parameter
	name customization implemented.

2008-06-11	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveAlias.class.php: closing need for
	aliases in Form.

2008-06-19	Ivan Y. Khvostishkov

	* main/DAOs/Workers/: getListByIds() did not work without objects in
	identity map, fixed.

2008-06-03	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: multi-get response deserialized
	all at once now; fixed cache corruption bug in case of custom __wakeup
	implementation.

2008-05-30	Denis M. Gabaidulin

	* main/Base/IsoCurrency.class.php: basic currency's list by lifter.

2008-05-27	Konstantin V. Arkhipov

	* main/DAOs/Workers/: fixed partial cached list case in
	getListByIds().

2008-05-26	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveDomDocument.class.php: primitive for
	parsing and validating XML DOM.

	* core/Form/Primitives/BasePrimitive.class.php: getErrorLabel() for
	custom validation error messages.

	* core/Form/Form.class.php: getPrimitiveErrorLabel() for custom
	message, getTextualErrors() fixed to return such a messages too.

	* test/core/PrimitiveDomDocumentTest.class.php, test/misc/text.xsd:
	corresponding tests.

2008-05-23	Pismenny E. Dmitry

	* main/Net/Http/CurlHttpClient.class.php: can send cookie now.
	Fixed GET query construction.

2008-05-02	Konstantin V. Arkhipov

	* main/DAOs/: fetchEncapsulants is now the private method, only
	makeOnlyObject and completeObject are free for customizations now.

	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-26	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator
	filter were merged from 0.10.

2008-04-16	Ivan Y. Khvostishkov

	* core/Exceptions/DatabaseIsDownException.class.php: when connect
	fails.

2008-04-13	Konstantin V. Arkhipov

	* test/core/: tests for Binary and Boolean types added.
