@@ -1,5 +1,13 @@
 # $Id$
 
+2008-06-19	Ivan Y. Khvostishkov
+
+	* main/Flow/EmptyView.class.php: fake view which renders as empty
+	string.
+
+	* main/Flow/MultiPrefixPhpViewResolver.class.php: added useful ability
+	do disable certain views (treated as EmptyView).
+
 2008-06-11	Denis M. Gabaidulin
 
 	* main/Flow/BaseEditor.class.php: object identifier parameter
